Implementação da inclusao e da lista do item projeto repository e service.
